--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "desktop",
+  "name": "tester",
   "version": "1.0.0",
-  "description": "",
+  "description": "please work",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "heroku"
+  ],
   "author": "Troy Wingo",
   "license": "ISC",
   "dependencies": {
